--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ h1, h2 {
 	color: #4aaaa5;
 	font-weight: bold;
 }
-a {
+ul a {
 	text-decoration: none;
 	font-size: 18px;
 }
@@ -117,6 +117,7 @@ label{
 	display: block;
 	float:left;
 	padding-bottom: 2%;
+	color: black;
 }
 
 input,  textarea {
@@ -134,6 +135,10 @@ input[type="submit"] {
 	border: none;
 	padding: 18px 24px;
 	font-size: 18px; 
+}
+
+p.a{
+	font-size:16px;
 }
 
 /*PAGE 1 INDEX*/
